# YoutubeAlarm

./: .gitignore  LICENSE  README.html  README.md  create_youtube_alarm_env.sh  killYoutube.py  musicLibrary_test.py  music_library.py  pyproject.toml  vlc_manager.py  vlc_test.py  vlcrc  youtube_alarm.py
scripts/: create_python_env.sh
src/: main.py  utils.py  vlc_manager.py
src/youtube_alarm/: __init__.py  main.py  music_library.py  vlc_manager.py
tests/: test_music_library.py  test_vlc_manager.py
